--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -4,6 +4,10 @@ services:
   mongo:
     image: mongo
     restart: always
+    volumes:
+      - ./mongoData:/data/db
+    ports:
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
