--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -27,7 +26,7 @@ replay_pid*
 *.DS_Store
 
 # gradle
-.gradle
+.gradle.
 
 #generated files
 build
